tests/snapshots/examples_fixtures/aoc__2025__aoc_day4_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day4_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:43:13
   |
43 |             reverse(acc)
   |             ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:52:48
   |
52 |             [pt | rest] -> points_to_set(rest, put(acc, point_key(pt), true)),
   |                                                ^^^

Hint:
  Define it first: let put = ...;

Help:
  Did you mean `pt`?


error[E004]: Undefined Variable

I can't find a value named `has_key`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:58:9
   |
58 |         has_key(point_set, to_string(r) + "," + to_string(c))
   |         ^^^^^^^

Hint:
  Define it first: let has_key = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:84:18
   |
84 |             _ -> reverse(acc)
   |                  ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `has_key`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:91:20
   |
91 |                 if has_key(removed_set, point_key(pt)) {
   |                    ^^^^^^^

Hint:
  Define it first: let has_key = ...;


error[E001]: Duplicate Name

Duplicate binding: `point_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:102:9
    |
102 |         let point_set = points_to_set(points, {})
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `point_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:110:13
    |
110 |             let point_set = points_to_set(points, {})
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `removed_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:116:17
    |
116 |                 let removed_set = points_to_set(removed, {})
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `points` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:130:5
    |
130 |     let points = collect_points(lines, 0, rows, cols, None)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |

Found 9 errors.
== stdout ==
<not executed>
