tests/snapshots/examples_fixtures/aoc__2025__aoc_day4_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day4_part2.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
