tests/snapshots/examples_fixtures/aoc__2025__aoc_day6_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day6_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day6_part2.flx:82:18
   |
82 |     let digits = [
   |                  ^
83 |     char_at_pad(line_at(lines, row), col)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
84 |     | row <- range(0, num_rows),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
85 |     char_at_pad(line_at(lines, row), col) != " "
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
86 |     ]
   | ^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day6_part2.flx:94:16
   |
94 |     let cols = range(start, stop)
   |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day6_part2.flx:96:23
   |
96 |         let factors = [col_value(lines, num_rows, col, 1) | col <- cols]
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `product`.

  examples/aoc/2025/aoc_day6_part2.flx:97:9
   |
97 |         product(factors)
   |         ^^^^^^^

Hint:
  Define it first: let product = ...;

Found 4 errors.
== stdout ==
<not executed>
